k8s/04-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-api
  labels:
    app: api
spec:
  selector:
    matchLabels:
      app: api
      tier: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: api
        tier: backend
    spec:
      volumes:
        - name: ssh-key
          secret:
            secretName: zeb-test-key
            defaultMode: 0600
      containers:
        - name: test-api
          resources:
            requests:
              memory: "64Mi"
              cpu: "256m"
            limits:
              memory: "256Mi"
              cpu: "512m"
          image: erickdsama/api_zeb:v3.0.6
          volumeMounts:
            - name: ssh-key
              readOnly: true
              mountPath: '/flask/keys/'
          ports:
            - containerPort: 5000
---
##########################################
### SERVICE OF API                  ######
##########################################
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  type: ClusterIP
  ports:
    - targetPort: 5000
      port: 5000
  selector:
    app: api
    tier: backend
